--- a/app/views/lib/bookgroup.html
+++ b/app/views/lib/bookgroup.html
@@ -35,28 +35,59 @@
             <div class="panel-heading">{{'Lib.Book' | translate}}</div>
             <div class="panel-body">
                 <!-- Tables -->
-                <table st-table="dispList" st-safe-src="BookGroupObject.Books" class="table table-striped table-hover">
+                <table st-table="bookList" st-safe-src="BookGroupObject.Books" class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th st-sort="id" translate="Common.ID">ID</th>
+                            <th translate="Common.ID">ID</th>
                             <th st-sort="name">Name</th>
+                            <th>
+                                <button type="button" class="btn btn-sm" ng-click="addItem()" tooltip="{{'Common.Create' | translate}}">
+                                    <i class="glyphicon glyphicon-plus">
+                                    </i>
+                                </button>
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="row in dispList">
+                        <tr ng-repeat="row in bookList">
                             <td>
-                                <a ng-href="#/home/lib/book/display/{{row.ID}}"> {{row.ID}} </a>
+                                <div ng-if="row.isEditing">
+                                    <input type="text" ng-model="row.ID">
+                                </div>
+                                <div ng-if="!row.isEditing">
+                                    <div ng-if="row.ID === -1">
+                                        <input type="text" ng-model="row.ID" readonly>
+                                    </div>
+                                    <div ng-if="row.ID !== -1">
+                                        <a ng-href="#/home/lib/book/display/{{row.ID}}">{{row.ID}}</a>
+                                    </div>
+                                </div>
                             </td>
                             <td>{{row.Names_RT}}</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="2" class="text-center">
-                                <cst-count></cst-count>
+                            <td>
+                                <div ng-hide="row.isEditing">
+                                    <button type="button" class="btn btn-sm" ng-click="editItem(row)" tooltip="{{'Common.Edit' | translate}}">
+                                        <i class="glyphicon glyphicon-edit">
+                                        </i>
+                                    </button>
+                                    <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger" tooltip="{{'Common.Delete' | translate}}">
+                                        <i class="glyphicon glyphicon-remove-circle">
+                                        </i>
+                                    </button>
+                                </div>
+                                <div ng-show="row.isEditing">
+                                    <button type="button" class="btn btn-sm" ng-click="saveItem(row)" tooltip="{{'Common.Save' | translate}}">
+                                        <i class="glyphicon glyphicon-save">
+                                        </i>
+                                    </button>
+                                    <button type="button" class="btn btn-sm" ng-click="cancelEditItem(row)" tooltip="{{'Common.Cancel' | translate}}">
+                                        <i class="glyphicon glyphicon-refresh">
+                                        </i>
+                                    </button>
+                                </div>
                             </td>
                         </tr>
-                    </tfoot>
+                    </tbody>
                 </table>
             </div>
         </div>
