--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,91 +1,5 @@
 <div id="viewHome">
 
-	<!-- Navigation area begins -->
-<!-- 	<div class="container"> -->
-<!-- 		<nav class="navbar navbar-inverse navbar-fixed-top" > -->
-<!-- 			<div class="container"> -->
-<!-- 				<div class="navbar-header"> -->
-<!-- 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" -->
-<!-- 						aria-controls="navbar" ng-click="isCollapsed = !isCollapsed"> -->
-<!-- 						<span class="sr-only">Toggle navigation</span>  -->
-<!-- 						<span class="icon-bar"></span>  -->
-<!-- 						<span class="icon-bar"></span>  -->
-<!-- 						<span class="icon-bar"></span> -->
-<!-- 					</button> -->
-<!-- 					<a class="navbar-brand visible-xs" href="#/home">Home Info . Hub</a> -->
-<!-- 				</div> -->
-<!-- 				<div id="navbar" class="navbar-collapse collapse"> -->
-<!-- 					<ul class="nav navbar-nav"> -->
-<!-- 						<li class="dropdown"> -->
-<!-- 							<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false" dropdown ng-click="isCollapsed = !isCollapsed">Home<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a ui-sref="home.userdetail">User Detail</a></li> -->
-<!-- 								<li role="separator" class="divider"></li> -->
-<!-- 								<li><a href="" ng-click="logout()">Logout</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 						<li class="dropdown"><a href="" class="dropdown-toggle" -->
-<!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false" dropdown>Learning Part<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a ui-sref="home.learn.object.list">Learn Object</a></li> -->
-<!-- 								<li><a ui-sref="home.learn.history.list">Learn History</a></li> -->
-<!-- 								<li><a ui-sref="home.learn.award.list">Learn Award</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 						<li class="dropdown"><a href="" class="dropdown-toggle" -->
-<!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false">Finance Part<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a href="#/financeaccount">Accounts</a></li> -->
-<!-- 								<li><a href="#/financedocument">Document</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 						<li class="dropdown"><a href="" class="dropdown-toggle" -->
-<!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false">Acknowledges<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li> -->
-<!-- 								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li> -->
-<!-- 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li> -->
-<!-- 								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li> -->
-<!-- 								<li role="separator" class="divider"></li> -->
-<!-- 								<li class="dropdown-header">Angular UI</li> -->
-<!-- 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular -->
-<!-- 										UI</a></li> -->
-<!-- 								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li> -->
-<!-- 								<li><a target="_blank" -->
-<!-- 									href="http://angular-ui.github.io/ui-router/">UI-Router</a></li> -->
-<!-- 								<li><a target="_blank" -->
-<!-- 									href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li> -->
-<!-- 								<li role="separator" class="divider"></li> -->
-<!-- 								<li class="dropdown-header">CDNs</li> -->
-<!-- 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu -->
-<!-- 										CDN</a></li> -->
-<!-- 								<li><a href="">One more separated link</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 						<li><a href="#about">About</a></li> -->
-<!-- 					</ul> -->
-<!-- 					<ul class="nav navbar-nav navbar-right"> -->
-<!-- 						<li class="dropdown"><a href="" class="dropdown-toggle" -->
-<!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false">Languages<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a href="">English</a></li> -->
-<!-- 								<li><a href="">Chinese</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 						<li class="dropdown"><a href="" class="dropdown-toggle" -->
-<!-- 							data-toggle="dropdown" role="button" aria-haspopup="true" -->
-<!-- 							aria-expanded="false">Themes<span class="caret"></span></a> -->
-<!-- 							<ul class="dropdown-menu"> -->
-<!-- 								<li><a href="">Default</a></li> -->
-<!-- 								<li><a href="">More to come....</a></li> -->
-<!-- 							</ul></li> -->
-<!-- 					</ul> -->
-<!-- 				</div> -->
-<!-- 				/.nav-collapse -->
-<!-- 			</div> -->
-<!-- 		</nav> -->
-<!-- 	</div> -->
-
 	<header class="navbar navbar-inverse navbar-fixed-top">
 	    <div class="navbar-inner">
 	        <div class="container">
@@ -102,18 +16,18 @@
 	            </div>
 	            <nav class="hidden-xs">
 	                <ul class="nav navbar-nav">
-	                    <li class="dropdown" dropdown>
-	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Home">Home</span><b class="caret"></b></a>
-	                        <ul class="dropdown-menu">
+	                    <li uib-dropdown>
+	                        <a role="button" uib-dropdown-toggle><span translate="Nav.Home">Home</span><b class="caret"></b></a>
+	                        <ul uib-dropdown-menu>
 	                            <li><a ui-sref="home.userdetail"><span translate="Nav.UserDetail">User Detail</span></a></li>
 								<li><a ui-sref="home.userlist"><span translate="Nav.Users">User List</span></a></li>
 								<li role="separator" class="divider"></li>
 	                            <li><a href="" ng-click="logout()"><span translate="Login.Logout">Logout</span></a></li>                            
 	                        </ul>
 	                    </li>
-	                    <li class="dropdown" dropdown>
-	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.LearningTrace">Learning</span><b class="caret"></b></a>
-	                        <ul class="dropdown-menu">
+	                    <li uib-dropdown>
+	                        <a role="button" uib-dropdown-toggle><span translate="Nav.LearningTrace">Learning</span><b class="caret"></b></a>
+	                        <ul uib-dropdown-menu>
 								<li class="dropdown-header"><span translate="Learn.LearningCategory">Learn Category</span></li>
 	                            <li><a ui-sref="home.learn.category.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.learn.category.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
@@ -128,9 +42,9 @@
 								<li><a ui-sref="home.learn.award.list"><span translate="Learn.LearningAward">Learn Award</span></a></li>
 	                        </ul>
 	                    </li>
-	                    <li class="dropdown" dropdown>
-	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.FinanceTrace">Finance</span><b class="caret"></b></a>
-	                        <ul class="dropdown-menu">
+	                    <li uib-dropdown>
+	                        <a role="button" uib-dropdown-toggle><span translate="Nav.FinanceTrace">Finance</span><b class="caret"></b></a>
+	                        <ul uib-dropdown-menu>
 								<li><a ui-sref="home.finance.setting"><span translate="Finance.Setting">Setting</span></a></li>
 								<li><a ui-sref="home.finance.currency.list"><span translate="Finance.Currency">Currency</span></a></li>
 	                            <li><a ui-sref="home.finance.accountcategory.list"><span translate="Finance.AccountCategory">Account Category</span></a></li>
@@ -154,9 +68,9 @@
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
 	                    </li>
-	                    <li class="dropdown" dropdown>
-	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
-	                        <ul class="dropdown-menu">
+	                    <li uib-dropdown>
+	                        <a role="button" uib-dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
+	                        <ul uib-dropdown-menu>
 								<li><a ui-sref="home.lib.setting"><span translate="Common.Setting">Setting</span></a></li>
                                 <li><a ui-sref="home.lib.language.list"><span translate="Common.Language">Language</span></a></li>
                                 <li><a ui-sref="home.lib.person.list"><span translate="Lib.Person">Person</span></a></li>
@@ -175,9 +89,9 @@
 	                </ul>
 	                
 	                <ul class="nav navbar-nav navbar-right">
-	                    <li class="dropdown" dropdown>
-		                	<a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Common.Themes">Themes</span><b class="caret"></b></a>
-							<ul class="dropdown-menu">
+	                    <li uib-dropdown>
+		                	<a role="button" uib-dropdown-toggle><span translate="Common.Themes">Themes</span><b class="caret"></b></a>
+							<ul uib-dropdown-menu>
 								<li><a href="" ng-click="setTheme()"><span translate="Common.Default">Default</span></a></li>
 								<li role="separator" class="divider"></li>
 								<li><a href="" ng-click="setTheme('cerulean')">cerulean</a></li>
@@ -199,9 +113,9 @@
 								<li><a href="" ng-click="setTheme('yeti')">yeti</a></li>
 							</ul>
 						</li>
-	                    <li class="dropdown" dropdown>
-		                	<a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Common.Language">Languages</span><b class="caret"></b></a>
-							<ul class="dropdown-menu">
+	                    <li uib-dropdown>
+		                	<a role="button" uib-dropdown-toggle><span translate="Common.Language">Languages</span><b class="caret"></b></a>
+							<ul uib-dropdown-menu>
                                 <li><a href="" ng-click="setLanguage('zh')">简体中文</a></li>
 								<li><a href="" ng-click="setLanguage('en')">English</a></li>
 							</ul>
