--- a/app/views/finance/financedocument.html
+++ b/app/views/finance/financedocument.html
@@ -69,7 +69,7 @@
                 <label class="control-label col-sm-2" translate="Common.Date">Date</label>
                 <div class="col-sm-10">
                     <div class="input-group">
-                        <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
+                        <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
                                 datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
