--- a/app/views/finance/financedocument_downpay.html
+++ b/app/views/finance/financedocument_downpay.html
@@ -35,7 +35,7 @@
             <label class="control-label col-sm-2" translate="Common.Date">Date</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
+                    <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
                             datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -123,7 +123,7 @@
 					<label class="control-label col-sm-2" translate="Finance.BeginDate">Start Date</label>
 					<div class="col-sm-10">
 						<div class="input-group">
-							<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="AccountObject.StartDate" is-open="isStartDateOpened"
+							<input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="AccountObject.StartDate" is-open="isStartDateOpened"
 									datepicker-options="startDateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
 							<span class="input-group-btn">
 								<button type="button" class="btn btn-default" ng-click="openStartDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -136,7 +136,7 @@
 					<label class="control-label col-sm-2" translate="Finance.EndDate">End Date</label>
 					<div class="col-sm-10">
 						<div class="input-group">
-							<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="AccountObject.EndDate" is-open="isEndDateOpened"
+							<input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="AccountObject.EndDate" is-open="isEndDateOpened"
 									datepicker-options="endDateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
 							<span class="input-group-btn">
 								<button type="button" class="btn btn-default" ng-click="openEndDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -226,7 +226,7 @@
 							<label class="control-label col-sm-2" translate="Common.Date">Date</label>
 							<div class="col-sm-10">
 								<div class="input-group">
-									<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="selectedDPItem.TranDate" is-open="isItemDateOpened"
+									<input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="selectedDPItem.TranDate" is-open="isItemDateOpened"
 											datepicker-options="itemDateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
 									<span class="input-group-btn">
 										<button type="button" class="btn btn-default" ng-click="openItemDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
