--- a/app/views/finance/financedocumenthier.html
+++ b/app/views/finance/financedocumenthier.html
@@ -1,74 +1,78 @@
 <div id="viewFinanceDocumentHier">
 
-	<div class="page-header">
-		<h2>
+    <div class="page-header">
+        <h2>
 			<span translate="Finance.Documents">Finance Document</span><small translate="Common.HierarchyView">Hierarchy View </small>
 		</h2>
 
-		<div class="btn-toolbar" role="toolbar" aria-label="...">
-		  <div class="btn-group" role="group" aria-label="operation">
-			<div class="btn-group" role="group">
-            	<div class="dropdown" dropdown>
-	                <button role="button" class="btn-group btn-default dropdown-toggle" dropdown-toggle><span translate="Common.New">New</span><b class="caret"></b></button>
-	                <ul class="dropdown-menu">
-						<li><a ui-sref="home.finance.document.create"><span translate="Finance.NormalDocument">Normal Document</span></a></li>
-						<li><a ui-sref="home.finance.document.create_tran"><span translate="Finance.TransferDocument">Transfer Document</span></a></li>
-						<li><a ui-sref="home.finance.document.create_currexg"><span translate="Finance.CurrencyExchangeDocument">Currency Exchange Document</span></a></li>
-						<li><a ui-sref="home.finance.document.create_instal"><span translate="Finance.InstallmentDocument">Installment</span></a></li>
-						<li><a ui-sref="home.finance.document.create_downpay"><span translate="Finance.DownPaymentDocument">Down Payment</span></a></li>
- 					</ul>
-                </div>
-			</div>
-		  </div>
-		</div>
-	</div>
+        <div class="btn-toolbar" role="toolbar" aria-label="...">
+            <div class="btn-group" role="group" aria-label="operation" uib-dropdown>
+                <button type="button" class="btn btn-primary btn-xs" uib-dropdown-toggle><span translate="Common.New">New</span><span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-single-button">
+                    <li role="menuitem"><a ui-sref="home.finance.document.create"><span translate="Finance.NormalDocument">Normal Document</span></a></li>
+                    <li role="menuitem"><a ui-sref="home.finance.document.create_tran"><span translate="Finance.TransferDocument">Transfer Document</span></a></li>
+                    <li role="menuitem"><a ui-sref="home.finance.document.create_currexg"><span translate="Finance.CurrencyExchangeDocument">Currency Exchange Document</span></a></li>
+                    <li role="menuitem"><a ui-sref="home.finance.document.create_downpay"><span translate="Finance.DownPaymentDocument">Down Payment</span></a></li>
+                    <li class="divider"></li>
+                    <li role="menuitem"><a ui-sref="home.finance.document.create_instal"><span translate="Finance.InstallmentDocument">Installment</span></a></li>
+                </ul>
+            </div>
 
-	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-			<div js-tree="treeConfig" ng-model="treeData" tree="treeInstance" should-apply="ignoreModelChanges()"
-				tree-events="changed:onTreeNodeChanged"></div>
-		</div>
-		
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-			<table st-table="docitemCollection" st-safe-src="safedocitemColl" class="table table-striped table-hover">
-				<thead>
-					<tr>
-						<th st-sort="docid" translate="Common.ID">ID</th>
-						<th st-sort="trandate" translate="Common.Date">Tran Date</th>
-						<th st-sort="trantype" >Tran Type</th>
-						<th st-sort="tranamount" translate="Finance.Amount">Amount</th>
-						<th st-sort="desp" translate="Common.Comment">Comment</th>
-						<th st-sort="cc">Cost Center</th>
-						<th st-sort="ord">Order</th>
-					</tr>
-					<tr>
-						<th colspan="7"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="row in docitemCollection">
-						<td>{{row.DocID}}</td>
-						<td>{{row.TranDate | date:'yyyy.MM.dd'}}</td>
-						<td>{{row.TranTypeObject.Name}}</td>
-						<td>{{row.TranAmount | currency: '￥'}}</td>
-						<td>{{row.Desp}}</td>
-						<td>{{row.ControlCenterObject.Name}}</td>
-						<td>{{row.OrderObject.Name}}</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan="2" class="text-center">
-							<cst-count></cst-count>
-						</td>
-						<td colspan="3" class="text-center" st-pagination="" st-items-by-page="20">
-						</td>
-						<td colspan="2" class="text-center">
-							<cst-sum columnname="TranAmount"></cst-sum>
-						</td>
-					</tr>
-				</tfoot>
-			</table>
-		</div>			
-	</div>
+            <div class="btn-group" role="group" aria-label="">
+                <button type="button" class="btn-group btn-primary" tooltip="{{'Common.Refresh' | translate}}" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div js-tree="treeConfig" ng-model="treeData" tree="treeInstance" should-apply="ignoreModelChanges()" tree-events="changed:onTreeNodeChanged"></div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+            <table st-table="docitemCollection" st-safe-src="safedocitemColl" class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th st-sort="docid" translate="Common.ID">ID</th>
+                        <th st-sort="trandate" translate="Common.Date">Tran Date</th>
+                        <th st-sort="trantype">Tran Type</th>
+                        <th st-sort="tranamount" translate="Finance.Amount">Amount</th>
+                        <th st-sort="desp" translate="Common.Comment">Comment</th>
+                        <th st-sort="cc">Cost Center</th>
+                        <th st-sort="ord">Order</th>
+                    </tr>
+                    <tr>
+                        <th colspan="7">
+                            <input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"
+                            />
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="row in docitemCollection">
+                        <td>{{row.DocID}}</td>
+                        <td>{{row.TranDate | date:'yyyy.MM.dd'}}</td>
+                        <td>{{row.TranTypeObject.Name}}</td>
+                        <td>{{row.TranAmount | currency: '￥'}}</td>
+                        <td>{{row.Desp}}</td>
+                        <td>{{row.ControlCenterObject.Name}}</td>
+                        <td>{{row.OrderObject.Name}}</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2" class="text-center">
+                            <cst-count></cst-count>
+                        </td>
+                        <td colspan="3" class="text-center" st-pagination="" st-items-by-page="20">
+                        </td>
+                        <td colspan="2" class="text-center">
+                            <cst-sum columnname="TranAmount"></cst-sum>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
 </div>
