--- a/app/views/finance/financeorder.html
+++ b/app/views/finance/financeorder.html
@@ -49,7 +49,7 @@
                 <label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
                  <div class="col-sm-10">
                 <div class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isValidfromDateOpened"
+                    <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isValidfromDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -62,7 +62,7 @@
                 <label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
                  <div class="col-sm-10">
                 <div class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isValidtoDateOpened"
+                    <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isValidtoDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
