--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -10,7 +10,7 @@
 			<label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
 			<div class="col-sm-10">
 				<div class="input-group">
-					<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidFromDate" is-open="isValidfromDateOpened"
+					<input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="ValidFromDate" is-open="isValidfromDateOpened"
 							datepicker-options="dateOptions" required close-text="{{'Common.Close' | translate }}" />
 					<span class="input-group-btn">
 						<button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -23,7 +23,7 @@
 			<label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
 			<div class="col-sm-10">
 				<div class="input-group">
-					<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidToDate" is-open="isValidtoDateOpened"
+					<input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="ValidToDate" is-open="isValidtoDateOpened"
 							datepicker-options="dateOptions" required close-text="{{'Common.Close' | translate }}" />
 					<span class="input-group-btn">
 						<button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
