--- a/app/views/learn/learnplan.html
+++ b/app/views/learn/learnplan.html
@@ -83,7 +83,7 @@
             <div class="panel-heading">{{'Learn.SimulatePlan' | translate}}</div>
             <div class="panel-body">
                 <div class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="simulateDate" is-open="isDateOpened"            		
+                    <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="simulateDate" is-open="isDateOpened"            		
                             datepicker-options="dateOptions" close-text="{{'Common.Close' | translate}}" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openSimulateDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -264,7 +264,7 @@
                     <label class="control-label col-sm-2" translate="Learn.StartDate">Start Date:</label>
                     <div class="col-sm-10">
                         <div class="input-group">
-                            <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="SelectedPlanParticipant.StartDate" is-open="isStartDateOpened"            		
+                            <input type="text" class="form-control" uib-datepicker-popup="{{DateFormat}}" ng-model="SelectedPlanParticipant.StartDate" is-open="isStartDateOpened"            		
                                     datepicker-options="dateOptions" close-text="{{'Common.Close' | translate}}" />
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default" ng-click="openStartDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
