--- a/app/views/finance/financereportorder.html
+++ b/app/views/finance/financereportorder.html
@@ -5,7 +5,7 @@
 		</h2>
 	</div>
 	
-	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
+	<div><span translate="Finance.Currency">Currency</span> - <span class="label label-default">{{ReportCurrency}}</span></div>
 	<br> 
 	
 	<table st-table="rptCollection" st-safe-src="dataReport" class="table table-striped table-hover">
