--- a/app/views/home.html
+++ b/app/views/home.html
@@ -60,10 +60,10 @@
 								<li role="separator" class="divider"></li>
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Finance.Documents">Finance Documents</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Finance.Documents">Finance Documents</span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
-	                            <li><a ui-sref="home.finance.exgratelist">Exchange Rate List</a></li>
+	                            <li><a ui-sref="home.finance.exgratelist"><span translate="Finance.ExchangeRateList">Exchange Rate List</span></a></li>
 								<li role="separator" class="divider"></li>
 	                            <li><a ui-sref="home.finance.report.balancesheet"><span translate="Finance.BalanceReport">Balance Sheet</span></a></li>
-								<li><a ui-sref="home.finance.report.trantype">Transaction Type Report</a></li>
+								<li><a ui-sref="home.finance.report.trantype"><span translate="Finance.TranTypeReport">Transaction Type Report</span></a></li>
 								<li><a ui-sref="home.finance.report.ccbalance"><span translate="Finance.ControlCenterReport">Control Center Report</span></a></li>
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
