--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -33,15 +33,15 @@
 		</div>
 		
 		<div class="form-group">
-			<div class="col-sm-10">
-				<button class="btn btn-default btn-primary" ng-click="submit()" translate="Common.Submit"
-						ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
+			<div class="col-sm-2 col-sm-offset-10">
+				<button class="btn btn-default btn-primary" ng-click="submit()"
+						ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
 			</div>
 		</div>
 	</form>
 	
 	<br>
-	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
+	<div><span translate="Finance.Currency">Currency</span> - <span class="label label-default">{{ReportCurrency}}</span></div>
 	<br>
 	
 	<table st-table="rptCollection" st-safe-src="dataReport" class="table table-striped table-hover">
