--- a/app/views/finance/financereporttt.html
+++ b/app/views/finance/financereporttt.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceReportTT">
 	<div class="page-header">
 		<h2>
-			Transaction Type Report <small translate="Common.ListView">List View</small>
+			<span translate="Finance.TranTypeReport">Transaction Type Report</span> <small translate="Common.ListView">List View</small>
 		</h2>
 	</div>
 	
@@ -33,15 +33,15 @@
 		</div>
 		
 		<div class="form-group">
-			<div class="col-sm-10">
+			<div class="col-sm-2 col-sm-offset-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()"
-						ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
+						ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
 			</div>
 		</div>
 	</form>
 	
 	<br>
-	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
+	   <div><span translate="Finance.Currency">Currency</span> - <span class="label label-default">{{ReportCurrency}}</span></div>
 	<br>
 	
 	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
