--- a/app/views/learn/learncategory.html
+++ b/app/views/learn/learncategory.html
@@ -23,18 +23,18 @@
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptUser" translate="Common.Parent">Parent:</label>
+			<label class="control-label col-sm-2" for="iptParent" translate="Common.Parent">Parent:</label>
 			<div class="col-sm-10">
-				<select id="iptUser" ng-model="CategoryObject.ParentID" ng-disabled="ActivityID == 3"
+				<select class="form-control" id="iptParent" ng-model="CategoryObject.ParentID" ng-disabled="ActivityID == 3"
 					ng-options="usr.ID as usr.FullDisplayText for usr in arLearnCategory">
 				</select>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptReason" translate="Common.Comment">Comment</label>
+			<label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
 			<div class="col-sm-10">
-				<input rows="5" id="iptReason" ng-readonly="ActivityID == 3" class="form-control" 
+				<input rows="5" id="iptComment" ng-readonly="ActivityID == 3" class="form-control" 
 					ng-model="CategoryObject.Comment" />
 			</div>
 		</div>
