--- a/app/views/learn/learnplan.html
+++ b/app/views/learn/learnplan.html
@@ -87,8 +87,8 @@
                             datepicker-options="dateOptions" close-text="{{'Common.Close' | translate}}" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openSimulateDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                        <button class="btn btn-default" ng-click="showSimulate()" ng-hide="isSimulate == true ">Simulate</button>
-                        <button class="btn btn-default" ng-click="hideSimulate()" ng-hide="isSimulate == false">Hide Simulate</button>
+                        <button class="btn btn-default" ng-click="showSimulate()" ng-hide="isSimulate == true " translate="Learn.Simulate">Simulate</button>
+                        <button class="btn btn-default" ng-click="hideSimulate()" ng-hide="isSimulate == false" translate="Learn.HideSimulate">Hide Simulate</button>
                     </span>
                 </div>
                 
@@ -132,7 +132,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Learn.RecurType">Recur Type:</label>
                     <div class="col-sm-10">
-                        <select ng-model="SelectedPlanDetail.RecurType" ng-disabled="isReadonly" required="required">
+                        <select class="form-control" ng-model="SelectedPlanDetail.RecurType" ng-disabled="isReadonly" required="required">
                             <option ng-disabled="isReadonly" value="1" translate="Learn.OneTime">One Time</option>
                             <option ng-disabled="isReadonly" value="2" translate="Learn.HEbbinghaus">H. Ebbinghaus</option>
                         </select>
@@ -142,22 +142,24 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Learn.DefferedDays">Defer Days:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-readonly="isReadonly" ng-model="SelectedPlanDetail.DeferredDay" required="required"></input>
+                        <input type="text" class="form-control" ng-readonly="isReadonly" ng-model="SelectedPlanDetail.DeferredDay" required="required"></input>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Common.Comment">Comment: </label>
                     <div class="col-sm-10">
-                        <input type="text" ng-readonly="isReadonly" ng-model="SelectedPlanDetail.Comment"></input>
+                        <input type="text" class="form-control" ng-readonly="isReadonly" ng-model="SelectedPlanDetail.Comment"></input>
 			        </div>
 		        </div>
 
                 <!-- Button group -->
                 <div class="form-group">
                 	<div class="col-sm-10">
-                    	<button class="btn btn-default btn-primary" ng-click="saveCurrentDetail()" ng-hide="isReadonly">Save Detail</button>
-                        <button class="btn btn-danger" ng-click="cancelCurrentDetail()">Cancel Detail Editing</button>
+                    	<button class="btn btn-default btn-primary" ng-click="saveCurrentDetail()" 
+                            ng-hide="isReadonly" translate="Learn.SaveCurrentDetail">Save Detail</button>
+                        <button class="btn btn-danger" ng-click="cancelCurrentDetail()" 
+                            translate="Learn.CancelDetailEditing">Cancel Detail Editing</button>
                     </div>
                 </div>
             </form>
@@ -254,7 +256,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Login.User">User:</label>
                     <div class="col-sm-10">
-                        <select ng-model="SelectedPlanParticipant.UserID" ng-disabled="isReadonly"
+                        <select class="form-control" ng-model="SelectedPlanParticipant.UserID" ng-disabled="isReadonly"
                             ng-options="usr.UserID as usr.DisplayAs for usr in arUserList">
 				        </select>
 			         </div>
@@ -276,7 +278,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Common.Status">Status</label>
                     <div class="col-sm-10">
-                        <select ng-model="SelectedPlanParticipant.Status" ng-disabled="isReadonly" required="required">
+                        <select class="form-control" ng-model="SelectedPlanParticipant.Status" ng-disabled="isReadonly" required="required">
                             <option ng-disabled="isReadonly" value="1" translate="Common.NotStart">Not Start</option>
                             <option ng-disabled="isReadonly" value="2" translate="Common.InProcess">In Process</option>
                             <option ng-disabled="isReadonly" value="3" translate="Common.Completed">Completed</option>
@@ -288,15 +290,17 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Common.Comment">Comment</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-readonly="isReadonly" ng-model="SelectedPlanParticipant.Comment"></input>
+                        <input type="text" class="form-control" ng-readonly="isReadonly" ng-model="SelectedPlanParticipant.Comment"></input>
                     </div>
                 </div>
                 
                 <!-- Button group -->
                 <div class="form-group">
                 	<div class="col-sm-10">
-                    	<button class="btn btn-default btn-primary" ng-click="saveCurrentParticipant()" ng-hide="isReadonly">Save Current Participant</button>
-                        <button class="btn btn-danger" ng-click="cancelCurrentParticipant()">Cancel Participant Editing</button>
+                    	<button class="btn btn-default btn-primary" ng-click="saveCurrentParticipant()" 
+                            ng-hide="isReadonly" translate="Learn.SaveCurrentParticipant">Save Current Participant</button>
+                        <button class="btn btn-danger" ng-click="cancelCurrentParticipant()"
+                            translate="Learn.CancelParticipantEditing">Cancel Participant Editing</button>
                     </div>
                 </div>
             </form>
