--- a/app/views/home.html
+++ b/app/views/home.html
@@ -75,7 +75,8 @@
                                 <li><a ui-sref="home.lib.person.list"><span translate="Lib.Person">Person</span></a></li>
                                 <li><a ui-sref="home.lib.org.list"><span translate="Lib.Organization">Organization</span></a></li>
                                 <li><a ui-sref="home.lib.loc.list"><span translate="Lib.Locations">Locations</span></a></li>
-                                <li><a ui-sref="home.lib.booktype.list"><span translate="Lib.BookType">Book Types</span></a></li>
+                                <li><a ui-sref="home.lib.booktype.list"><span translate="Lib.BookType">Book Types</span> - <span translate="Common.ListView">List View</span></a></li>
+                                <li><a ui-sref="home.lib.booktype.hierarchy"><span translate="Lib.BookType">Book Types</span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
                                 <li role="separator" class="divider"></li>
 								<li><a ui-sref="home.lib.bookgroup.list"><span translate="Lib.BookGroup">BookGroup</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.lib.book.list"><span translate="Lib.Books">Books</span> - <span translate="Common.ListView">List View</span></a></li>
